--- a/passwordManagementSystem/passwordSystemLogin.css
+++ b/passwordManagementSystem/passwordSystemLogin.css
@@ -1,7 +1,10 @@
 body {
   margin: 0;
   font-family: 'Segoe UI', sans-serif;
-  background: linear-gradient(135deg, #1f1c2c, #928dab);
+  background-image: url('login2.jpg');
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -10,7 +13,7 @@ body {
 
 .container {
   backdrop-filter: blur(10px);
-  background: rgba(255, 255, 255, 0.1);
+  background: rgba(40, 89, 224, 0.1);
   border-radius: 15px;
   padding: 40px;
   box-shadow: 0 0 20px rgba(0, 0, 0, 0.3);
@@ -54,6 +57,21 @@ button:hover {
 }
 
 #errorMsg {
-  color: #ff6b6b;
+  color: #da0c0c;
   margin-top: 10px;
+}
+
+.back-arrow {
+  position: absolute;
+  top: 20px;
+  left: 20px;
+  text-decoration: none;
+  font-size: 18px;
+  color: #fafaf8;
+  font-weight: bold;
+  transition: color 0.3s ease;
+}
+
+.back-arrow:hover {
+  color: #c4ee07;
 }
